--- a/prometheus-source-flink-example/docker-compose.yml
+++ b/prometheus-source-flink-example/docker-compose.yml
@@ -22,7 +22,8 @@ services:
       - '6123'
       - '6124'
       - '6125'
-      - '9091:9091'
+    expose:
+      - '9090'
     environment:
       - "TASKMANAGER_INITIAL_DELAY=10s"
     depends_on:
@@ -32,6 +33,38 @@ services:
       - "$PWD/conf/flink-conf.yaml:/opt/flink/conf/flink-conf.yaml"
       - "$PWD/conf/logback.xml:/opt/flink/conf/logback-console.xml"
       - "$PWD/target/prometheus-source-flink-example-1.0.0.jar:/opt/flink/usrlib/prometheus-source-flink-example-1.0.0.jar"
+    networks:
+      flink:
+
+  taskmanager-replica:
+    image: apache/flink:1.14-java11
+    ports:
+      - '6123'
+      - '6124'
+      - '6125'
+    expose:
+      - '9090'
+    environment:
+      - "TASKMANAGER_INITIAL_DELAY=10s"
+    depends_on:
+      - jobmanager
+    command: "taskmanager start"
+    volumes:
+      - "$PWD/conf/flink-conf.yaml:/opt/flink/conf/flink-conf.yaml"
+      - "$PWD/conf/logback.xml:/opt/flink/conf/logback-console.xml"
+      - "$PWD/target/prometheus-source-flink-example-1.0.0.jar:/opt/flink/usrlib/prometheus-source-flink-example-1.0.0.jar"
+    networks:
+      flink:
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - "$PWD/conf/nginx.conf:/etc/nginx/nginx.conf:ro"
+    depends_on:
+      - jobmanager
+      - taskmanager
+    ports:
+      - "9091:9091"
     networks:
       flink:
 
