--- a/prometheus-source-flink/pom.xml
+++ b/prometheus-source-flink/pom.xml
@@ -58,8 +58,8 @@
         <junit-jupiter-engine.version>5.8.2</junit-jupiter-engine.version>
         <junit-vintage-engine.version>5.8.2</junit-vintage-engine.version>
         <junit-jupiter-params.version>5.8.2</junit-jupiter-params.version>
-        <mockito-core.version>4.1.0</mockito-core.version>
-        <mockito-junit-jupiter.version>4.1.0</mockito-junit-jupiter.version>
+        <mockito-core.version>4.2.0</mockito-core.version>
+        <mockito-junit-jupiter.version>4.2.0</mockito-junit-jupiter.version>
         <okhttp.version>4.9.3</okhttp.version>
         <awaitility.version>4.1.1</awaitility.version>
         <awaitility-proxy.version>3.1.6</awaitility-proxy.version>
@@ -70,6 +70,7 @@
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <os-maven-plugin.version>1.6.0</os-maven-plugin.version>
         <assertj.version>3.21.0</assertj.version>
+        <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
     </properties>
 
     <dependencies>
@@ -119,7 +120,7 @@
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>5.0.0</version>
+            <version>${jakarta.servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
