--- a/prometheus-source-flink/pom.xml
+++ b/prometheus-source-flink/pom.xml
@@ -71,6 +71,7 @@
         <os-maven-plugin.version>1.6.0</os-maven-plugin.version>
         <assertj.version>3.21.0</assertj.version>
         <jakarta.servlet-api.version>5.0.0</jakarta.servlet-api.version>
+        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -219,7 +220,31 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco-maven-plugin.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/prometheus/**</exclude>
+                        <exclude>**/protobuf/**</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
