--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
           distribution: 'zulu'
           java-version: ${{ matrix.java-version }}
       - name: Generate Coverage Report
-        run: mvn clean verify
+        run: cd prometheus-source-flink && mvn clean verify
       - name: Archive Jacoco reports
         uses: actions/upload-artifact@v2.2.4
         with:
