--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: jacoco-report
-          path: target/site/jacoco/
+          path: prometheus-source-flink/target/site/jacoco/
 
       - name: Commit and push
         if: ${{ github.event_name != 'pull_request' }}
