--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -52,6 +52,7 @@ jobs:
           path: prometheus-source-flink/target/site/jacoco/
 
       - name: Commit and push
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           cd badges
           if [[ `git status --porcelain *.svg` ]]; then
